[package]
name = "alloc_counter"
version = "0.0.0"
authors = ["The SiO4 Project Developers <https://gitlab.com/sio4>"]
edition = "2018"
publish = false
license = "MIT OR Apache-2.0"

[features]
default = ["std", "counters", "no_alloc", "alloc_counter_macro"]
std = []
counters = []
no_alloc = []

[dependencies.alloc_counter_macro]
path = "alloc_counter_macro"
optional = true

#[dev-dependencies.futures-preview]
#version = "*"
