[package]
name = "alloc_counter"
version = "0.0.2"
authors = ["The SiO4 Project Developers <https://gitlab.com/sio4>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Count allocations, reallocations, deallocations. Allow, deny, or forbid allocations on an expression or function basis."
keywords = ["debugging", "profiling", "analysis", "allocation", "counter"]
categories = ["development-tools::debugging", "development-tools::profiling", "development-tools::testing", "memory-management", "no-std"]
documentation = "https://docs.rs/alloc_counter"
repository = "https://gitlab.com/sio4/code/alloc-counter"

[features]
default = ["std", "counters", "no_alloc"]
std = []
counters = []
no_alloc = ["alloc_counter_macro"]

[dependencies.alloc_counter_macro]
path = "alloc_counter_macro"
version = "0.0.1"
optional = true

#[dev-dependencies.futures-preview]
#version = "*"
