[package]
name = "alloc_counter"
version = "0.0.4"
authors = ["The SiO4 Project Developers <https://gitlab.com/sio4>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Count allocations, reallocations, deallocations. Allow, deny, or forbid allocations on an expression or function basis."
keywords = ["debugging", "profiling", "analysis", "allocation", "counter"]
categories = ["development-tools::debugging", "development-tools::profiling", "development-tools::testing", "memory-management", "no-std"]
documentation = "https://docs.rs/alloc_counter"
repository = "https://gitlab.com/sio4/code/alloc-counter"

[[example]]
name = "count_alloc_macro"
required-features = ["std", "macros"]

[features]
default = ["std", "macros"]
std = []
macros = ["alloc_counter_macro"]

[dependencies.alloc_counter_macro]
path = "alloc_counter_macro"
version = "0.0.2"
optional = true

[dependencies.pin-utils]
version = "0.1.0-alpha.4"

[dev-dependencies.futures-executor-preview]
version = "0.3.0-alpha.19"
