[package]
name = "alloc_counter_macro"
version = "0.0.1"
authors = ["The SiO4 Project Developers <https://gitlab.com/sio4>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "The #[no_alloc] macro for the alloc_counter crate."

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
quote = "0.6.11"
proc-macro2 = "0.4.27"

[dependencies.syn]
version = "0.15.26"
features = ["full"]
