[package]
name = "alloc_counter_macro"
version = "0.0.2"
authors = ["The SiO4 Project Developers <https://gitlab.com/sio4>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "The #[no_alloc] macro for the alloc_counter crate."

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
quote = "1.0.2"
proc-macro2 = "1.0.5"

[dependencies.syn]
version = "1.0.5"
features = ["full"]
